feat: デバッグボタンの追加とイベントリスナーの実装 - フロントエンドにデバッグボタンを追加し、リソースを1000追加する機能を実装しました。 - デバッグパネルを開くボタンも追加し、ユーザーがデバッグ情報にアクセスできるようにしました。 - デュアルビューシステムの研究ビューの読み込み時に、エラーハンドリングを強化しました。 - 研究ツリーの初期化時に、シンプルなリスト表示のフォールバック機能を追加しました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -956,6 +956,36 @@
     <div id="thought-speed-display">思考速度: <span id="thoughtSpeedMps">0</span> m/s (<span id="lightSpeedPercent">0.00</span>%)</div>
   </div>
 
+  <!-- デバッグボタン -->
+  <div id="debug-buttons" style="position: fixed; bottom: 20px; right: 10px; z-index: 10000; display: flex; gap: 5px;">
+    <button id="debug-resources-btn" style="
+      background: #10b981;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 12px;
+      opacity: 0.8;
+    " title="リソースを1000追加">
+      +1000 資源
+    </button>
+    <button id="debug-panel-btn" style="
+      background: #3b82f6;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 12px;
+      opacity: 0.8;
+    " title="デバッグパネルを開く (F4)">
+      デバッグ
+    </button>
+  </div>
+
   <!-- デュアルビューシステム -->
   <div id="dual-view-container" class="dual-view-inactive">
     <!-- タブバー -->
