feat: レーダーUIの追加と星管理機能の強化 - 新しいレーダーUIを実装し、ユーザーが星の管理をより直感的に行えるようにしました。 - 星管理パネルのスタイルを改善し、視認性を向上させました。 - レーダーのトグルボタンとコンテナの位置を調整し、ユーザーインターフェースの使いやすさを向上させました。 - デバッグボタンの位置を変更し、全体的なレイアウトを整理しました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -957,7 +957,7 @@
   </div>
 
   <!-- デバッグボタン -->
-  <div id="debug-buttons" style="position: fixed; bottom: 20px; right: 10px; z-index: 10000; display: flex; gap: 5px;">
+  <div id="debug-buttons" style="position: fixed; bottom: 100px; right: 10px; z-index: 10000; display: flex; gap: 5px;">
     <button id="debug-resources-btn" style="
       background: #10b981;
       color: white;
@@ -1439,8 +1439,8 @@
     </div>
 
     <!-- 銀河マップコンテナ -->
-    <button id="galaxy-map-toggle" title="レーダーを開閉">📡</button>
-    <div id="galaxy-map-container"></div>
+    <button id="galaxy-map-toggle" title="レーダーを開閉" style="display: flex;">📡</button>
+    <div id="galaxy-map-container" class="collapsed"></div>
 
     <!-- 統計・ログパネル -->
     <div id="stats-log-container">
