feat: プロジェクト名の変更と関連ファイルの更新 - プロジェクト名を「Cosmic Gardener」から「Fillstellar」に変更しました。 - HTML、JSON、TypeScriptファイル内のタイトルやコメントを更新し、一貫性を持たせました。 - UIのバージョン表示を新しいプロジェクト名に合わせて修正しました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmic Gardener - 3D Space Simulation</title>
+    <title>Fillstellar - 3D Space Simulation</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/dual-view.css">
     <!-- 旧UIスタイル（開発/デバッグ用のみ、2025年2月削除予定） -->
@@ -22,7 +22,7 @@
   <!-- 🔧 初期化フェードオーバーレイ -->
   <div id="fade-overlay">
     <div id="loading-content">
-      <h1>Cosmic Gardener</h1>
+      <h1>Fillstellar</h1>
     </div>
   </div>
 
