feat: 生産レート計算機能の実装とUIの更新 - `mathCache`システムを用いてエネルギー、有機物、バイオマスの生成レートを計算する機能を追加しました。 - メニューシステムにリソース統計、天体統計、グラフ表示、ヘルプ/コントロール画面の機能を実装しました。 - デュアルビューシステムのビュー入れ替え機能をアニメーション付きで実装しました。 - 研究ツリーパス検索機能を追加し、関連UIを整備しました。 - CSSスタイルを更新し、視認性と操作性を向上させました。

--- a/cosmic-gardener/frontend/index.html
+++ b/cosmic-gardener/frontend/index.html
@@ -6,6 +6,8 @@
     <title>Fillstellar - 3D Space Simulation</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/css/dual-view.css">
+    <link rel="stylesheet" href="/css/research-tree.css">
+    <link rel="stylesheet" href="/css/path-finder.css">
     <!-- 旧UIスタイル（開発/デバッグ用のみ、2025年2月削除予定） -->
     <script>
         // URLパラメータ ?legacy=true で旧UIスタイルを読み込み可能
